fix: CompilationMapper